[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "resource_lock"
version = "0.6.0"
authors = [
    {name = "Robert Blackwell", email = "rob@whiteacorn.com"},
]
description = "My package description"
readme = "README.rst"
requires-python = ">=3.8"
keywords = ["one", "two"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = []